; ModuleID = '/home/carl/AnghaBench/vlc/modules/codec/omxil/extr_mediacodec_jni.c_get_integer.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/codec/omxil/extr_mediacodec_jni.c_get_integer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.TYPE_6__ = type { i32 (%struct.TYPE_6__**, i32, i32, i64)*, i32 (%struct.TYPE_6__**, i64)* }

@jfields = common dso_local global %struct.TYPE_7__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_6__**, i32, i8*)* @get_integer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_integer(%struct.TYPE_6__** %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_6__**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store %struct.TYPE_6__** %0, %struct.TYPE_6__*** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = call i64 @JNI_NEW_STRING(i8* %10)
  store i64 %11, i64* %8, align 8
  %12 = load i64, i64* %8, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %36

14:                                               ; preds = %3
  %15 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %5, align 8
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 0
  %18 = load i32 (%struct.TYPE_6__**, i32, i32, i64)*, i32 (%struct.TYPE_6__**, i32, i32, i64)** %17, align 8
  %19 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %5, align 8
  %20 = load i32, i32* %6, align 4
  %21 = load i32, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @jfields, i32 0, i32 0), align 4
  %22 = load i64, i64* %8, align 8
  %23 = call i32 %18(%struct.TYPE_6__** %19, i32 %20, i32 %21, i64 %22)
  store i32 %23, i32* %9, align 4
  %24 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %5, align 8
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %25, i32 0, i32 1
  %27 = load i32 (%struct.TYPE_6__**, i64)*, i32 (%struct.TYPE_6__**, i64)** %26, align 8
  %28 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %5, align 8
  %29 = load i64, i64* %8, align 8
  %30 = call i32 %27(%struct.TYPE_6__** %28, i64 %29)
  %31 = call i64 (...) @CHECK_EXCEPTION()
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %34

33:                                               ; preds = %14
  store i32 0, i32* %4, align 4
  br label %37

34:                                               ; preds = %14
  %35 = load i32, i32* %9, align 4
  store i32 %35, i32* %4, align 4
  br label %37

36:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %37

37:                                               ; preds = %36, %34, %33
  %38 = load i32, i32* %4, align 4
  ret i32 %38
}

declare dso_local i64 @JNI_NEW_STRING(i8*) #1

declare dso_local i64 @CHECK_EXCEPTION(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
